# invoice-builder

./: .gitignore  README.md  docker-compose.yml
.aws/amazonq/rules/: python-standards.json
backend/: .dockerignore  .env.example  DATABASE.md  Dockerfile  init_db.py  migrator.yaml  pyproject.toml  settings.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  constants.py  database.py  deps.py  exceptions.py  handlers.py  logging.py
backend/app/migrations/: 002_add_company_fields.py  003_add_template_name.py
backend/app/models/: __init__.py  client.py  invoice.py  line_item.py  template.py  user.py
backend/app/routes/: __init__.py  auth.py  client.py  currency.py  health.py  invoice.py  invoice_operations.py  template.py
backend/app/schemas/: __init__.py  auth.py  client.py  invoice.py  template.py  user.py
backend/app/services/: __init__.py  auth.py  client.py  currency.py  email.py  invoice.py  pdf.py  template.py
backend/app/templates/email/: invoice.html
backend/app/templates/invoice/: .gitkeep  invoice_template.html  invoice_template_2.html  invoice_template_3.html  modern.html
backend/app/utils/: __init__.py  auth.py  jwt.py  pagination.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 1bad3c6f18c1_20251208_204431_initial_with_template_.py  f1dae44bf607_20251208_204229_initial_schema_with_.py
backend/scripts/: init_production_db.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  (+3 more)
(+37 files in other folders)
