[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "migrator-cli>=0.2.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "resend>=2.19.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "weasyprint>=66.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
